# ta

./: README.md
lab1/: variant.txt
lab1/flex/: CMakeLists.txt  lexer.cpp  lexer.l  main.cpp  parser.cpp  parser.y  tokens.h
lab1/generate/: CMakeLists.txt  generate.cpp  generate.h  generated_file.txt
lab1/regex/: CMakeLists.txt  Timer.cpp  Timer.h  main.cpp  regex.cpp  regex.h
lab2/: CMakeLists.txt  main.cpp  variant.txt
lab2/AST/: CMakeLists.txt
lab2/AST/include/: AST.h  ASTNode.h  CharNode.h  Operations.h  StackNode.h
lab2/AST/source/: AST.cpp  CharNode.cpp  Operations.cpp  StackNode.cpp
lab2/DFA/: CMakeLists.txt
lab2/DFA/include/: DFA.h  DFANode.h
lab2/DFA/source/: DFA.cpp  DFANode.cpp
lab2/myRegex/: CMakeLists.txt
lab2/myRegex/include/: myRegex.h
lab2/myRegex/source/: myRegex.cpp
